syntax = "proto3";
package api;

service Raft {
    // Sends a ping
    rpc Ping (PingMessage) returns (PongReply) {}
    rpc RequestVoteCall (RequestVote) returns (RequestVoteReply) {}
    rpc AppendEntriesCall (AppendEntries) returns (AppendEntriesReply) {}
    rpc SubmitCall (SubmitEntry) returns (SubmitReply) {}

//    // Sends another greeting
//    rpc SayHelloAgain (PingMessage) returns (PongReply) {}
}

// The request message containing the user's name.
message PingMessage {
    string name = 1;
}

// The response message containing the greetings
message PongReply {
    string message = 1;
}

message RequestVote {
    uint64   term = 1;
    uint64  candidateId = 2;
    uint64   LastLogIndex = 3;
    uint64   LastLogTerm = 4;
}

message RequestVoteReply {
    uint64 Term = 1;
    bool  VoteGranted = 2;
}

message AppendEntries {
    uint64    Term = 1;
    uint64    LeaderId = 2;
    uint64    PrevLogIndex = 3;
    uint64    PrevLogTerm  = 4;
    repeated  LogEntry entries = 5;
    uint64    LeaderCommit = 6;
}

//https://stackoverflow.com/questions/43167762/how-to-return-an-array-in-protobuf-service-rpc
message AppendEntriesReply {
    uint64 Term  = 1;
    bool  Success = 2;
}

message SubmitEntry {
    KeyValuePair command = 1;
}

message SubmitReply {
    uint64 LeaderId = 1;
    uint64 NodeId = 2;
    bool   Success = 3;
    string Address = 4;
}

message LogEntry {
    uint64 Term  = 1;
    KeyValuePair command = 2;
}

message KeyValuePair {
    string key = 1;
    bytes value = 2;
}

message CommitEntry {
    bytes command = 1;
    uint64 Index = 2;
    uint64 Term = 3;
}


